move back to api

--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,12 @@ configurations {
 	}
 }
 
-dependencyManagement {
-	imports {
-		mavenBom 'com.vaadin:vaadin-bom:19.0.8'
-	}
-}
-
-
 dependencies {
-	implementation 'com.vaadin:vaadin-spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.8'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
