move checklist and services to different folders

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,2 @@
-folder.path=src/test/resources/data/
+checklist.folder.path=src/test/resources/data/
+service.folder.path=src/test/resources/data/services/
