--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-folder.path=data/
+checklist.folder.path=data/
+service.folder.path=data/services/
 springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.path=/api/swagger
