new services filled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ checklist.folder.path=data/
 service.folder.path=data/services/
 springdoc.api-docs.path=/api/docs
 springdoc.swagger-ui.path=/api/swagger
+management.endpoints.web.exposure.include=*
